--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -12,7 +12,7 @@ a:active { color: #C00; background: transparent; }
 a:link img, a:visited img { border-style: none; }
 
 /* 画像 */
-span.img {
+.vrtl span.img {
 clear: both;
 display: inline-block;
 max-width: 100%;
@@ -22,7 +22,7 @@ writing-mode: horizontal-tb;
 -webkit-writing-mode: horizontal-tb;
 -epub-writing-mode: horizontal-tb;
 }
-span.img img {
+.vrtl span.img img {
 min-width: 1em;
 }
 /* 単ページ横100% */
@@ -34,14 +34,14 @@ width: 100%;
 height: 100%;
 }
 /* 回り込み 上 */
-span.img.ft {
+.vrtl span.img.ft {
 display: inline;
 float: left;
 clear: left;
 padding: 0 .5em .5em .5em;
 }
 /* 回り込み 下 */
-span.img.fb {
+.vrtl span.img.fb {
 display: inline;
 float: right;
 clear: right;
@@ -54,7 +54,7 @@ span.img.fh img {
 height: 100%;
 }
 /* 単ページfloat表示 */
-span.img.fpage {
+.vrtl span.img.fpage {
 display: block;
 float: left;
 clear: both;
@@ -71,7 +71,7 @@ float:left;
 padding: 0 .5em 100% .5em;
 }
 /* キャプション */
-span.img .caption {
+.vrtl span.img .caption {
 display: block;
 text-align: center;
 font-size: 85%;
@@ -123,12 +123,12 @@ display: inline-block;
 line-height: 1em;
 }
 /* 窓見出し 左右paddingは (lineheight-文字サイズ/2)/文字サイズ */
-span.mado.L { font-size:1.5em; padding:0 0.625em 0.33em 0; line-height:1em;}
-span.mado.M { font-size:1.3em; padding:0 0.846em 0.38em 0; line-height:1em;}
-span.mado.S { font-size:1.1em; padding:0 1.091em 0.45em 0; line-height:1em;}
+.vrtl span.mado.L { font-size:1.5em; padding:0 0.625em 0.33em 0; line-height:1em;}
+.vrtl span.mado.M { font-size:1.3em; padding:0 0.846em 0.38em 0; line-height:1em;}
+.vrtl span.mado.S { font-size:1.1em; padding:0 1.091em 0.45em 0; line-height:1em;}
 
 /** 割り注 (要改行) */
-span.wrc {
+.vrtl span.wrc {
 display: inline-block;
 font-size: .6em;
 line-height: 1em;
@@ -162,95 +162,95 @@ writing-mode: horizontal-tb;
 div.center, div.center p { text-align: center; }
 
 /* 字下げ */
-div.pt1 { padding-top: 1em; }
-div.pt2 { padding-top: 2em; }
-div.pt3 { padding-top: 3em; }
-div.pt4 { padding-top: 4em; }
-div.pt5 { padding-top: 5em; }
-div.pt6 { padding-top: 6em; }
-div.pt7 { padding-top: 7em; }
-div.pt8 { padding-top: 8em; }
-div.pt9 { padding-top: 9em; }
-div.pt10 { padding-top: 10em; }
-div.pt11 { padding-top: 11em; }
-div.pt12 { padding-top: 12em; }
-div.pt13 { padding-top: 13em; }
-div.pt14 { padding-top: 14em; }
-div.pt15 { padding-top: 15em; }
-div.pt16 { padding-top: 16em; }
-div.pt17 { padding-top: 17em; }
-div.pt18 { padding-top: 18em; }
-div.pt19 { padding-top: 19em; }
-div.pt20 { padding-top: 20em; }
-div.pt21 { padding-top: 21em; }
-div.pt22 { padding-top: 22em; }
-div.pt23 { padding-top: 23em; }
-div.pt24 { padding-top: 24em; }
-div.pt25 { padding-top: 25em; }
-div.pt26 { padding-top: 26em; }
-div.pt27 { padding-top: 27em; }
-div.pt28 { padding-top: 28em; }
-div.pt29 { padding-top: 29em; }
-div.pt30 { padding-top: 30em; }
+.vrtl .vrtl div.pt1 { padding-top: 1em; }
+.vrtl div.pt2 { padding-top: 2em; }
+.vrtl div.pt3 { padding-top: 3em; }
+.vrtl div.pt4 { padding-top: 4em; }
+.vrtl div.pt5 { padding-top: 5em; }
+.vrtl div.pt6 { padding-top: 6em; }
+.vrtl div.pt7 { padding-top: 7em; }
+.vrtl div.pt8 { padding-top: 8em; }
+.vrtl div.pt9 { padding-top: 9em; }
+.vrtl div.pt10 { padding-top: 10em; }
+.vrtl div.pt11 { padding-top: 11em; }
+.vrtl div.pt12 { padding-top: 12em; }
+.vrtl div.pt13 { padding-top: 13em; }
+.vrtl div.pt14 { padding-top: 14em; }
+.vrtl div.pt15 { padding-top: 15em; }
+.vrtl div.pt16 { padding-top: 16em; }
+.vrtl div.pt17 { padding-top: 17em; }
+.vrtl div.pt18 { padding-top: 18em; }
+.vrtl div.pt19 { padding-top: 19em; }
+.vrtl div.pt20 { padding-top: 20em; }
+.vrtl div.pt21 { padding-top: 21em; }
+.vrtl div.pt22 { padding-top: 22em; }
+.vrtl div.pt23 { padding-top: 23em; }
+.vrtl div.pt24 { padding-top: 24em; }
+.vrtl div.pt25 { padding-top: 25em; }
+.vrtl div.pt26 { padding-top: 26em; }
+.vrtl div.pt27 { padding-top: 27em; }
+.vrtl div.pt28 { padding-top: 28em; }
+.vrtl div.pt29 { padding-top: 29em; }
+.vrtl div.pt30 { padding-top: 30em; }
 
 /* 字下げ2 */
-div.mt1 { margin-top: 1em; }
-div.mt2 { margin-top: 2em; }
-div.mt3 { margin-top: 3em; }
-div.mt4 { margin-top: 4em; }
-div.mt5 { margin-top: 5em; }
-div.mt6 { margin-top: 6em; }
-div.mt7 { margin-top: 7em; }
-div.mt8 { margin-top: 8em; }
-div.mt9 { margin-top: 9em; }
-div.mt10 { margin-top: 10em; }
-div.mt11 { margin-top: 11em; }
-div.mt12 { margin-top: 12em; }
-div.mt13 { margin-top: 13em; }
-div.mt14 { margin-top: 14em; }
-div.mt15 { margin-top: 15em; }
-div.mt16 { margin-top: 16em; }
-div.mt17 { margin-top: 17em; }
-div.mt18 { margin-top: 18em; }
-div.mt19 { margin-top: 19em; }
-div.mt20 { margin-top: 20em; }
-div.mt21 { margin-top: 21em; }
-div.mt22 { margin-top: 22em; }
-div.mt23 { margin-top: 23em; }
-div.mt24 { margin-top: 24em; }
-div.mt25 { margin-top: 25em; }
-div.mt26 { margin-top: 26em; }
-div.mt27 { margin-top: 27em; }
-div.mt28 { margin-top: 28em; }
-div.mt29 { margin-top: 29em; }
-div.mt30 { margin-top: 30em; }
+.vrtl div.mt1 { margin-top: 1em; }
+.vrtl div.mt2 { margin-top: 2em; }
+.vrtl div.mt3 { margin-top: 3em; }
+.vrtl div.mt4 { margin-top: 4em; }
+.vrtl div.mt5 { margin-top: 5em; }
+.vrtl div.mt6 { margin-top: 6em; }
+.vrtl div.mt7 { margin-top: 7em; }
+.vrtl div.mt8 { margin-top: 8em; }
+.vrtl div.mt9 { margin-top: 9em; }
+.vrtl div.mt10 { margin-top: 10em; }
+.vrtl div.mt11 { margin-top: 11em; }
+.vrtl div.mt12 { margin-top: 12em; }
+.vrtl div.mt13 { margin-top: 13em; }
+.vrtl div.mt14 { margin-top: 14em; }
+.vrtl div.mt15 { margin-top: 15em; }
+.vrtl div.mt16 { margin-top: 16em; }
+.vrtl div.mt17 { margin-top: 17em; }
+.vrtl div.mt18 { margin-top: 18em; }
+.vrtl div.mt19 { margin-top: 19em; }
+.vrtl div.mt20 { margin-top: 20em; }
+.vrtl div.mt21 { margin-top: 21em; }
+.vrtl div.mt22 { margin-top: 22em; }
+.vrtl div.mt23 { margin-top: 23em; }
+.vrtl div.mt24 { margin-top: 24em; }
+.vrtl div.mt25 { margin-top: 25em; }
+.vrtl div.mt26 { margin-top: 26em; }
+.vrtl div.mt27 { margin-top: 27em; }
+.vrtl div.mt28 { margin-top: 28em; }
+.vrtl div.mt29 { margin-top: 29em; }
+.vrtl div.mt30 { margin-top: 30em; }
 
 /* 字上げ */
-div.pb1 { margin-bottom: 1em; }
-div.pb2 { margin-bottom: 2em; }
-div.pb3 { margin-bottom: 3em; }
-div.pb4 { margin-bottom: 4em; }
-div.pb5 { margin-bottom: 5em; }
-div.pb6 { margin-bottom: 6em; }
-div.pb7 { margin-bottom: 7em; }
-div.pb8 { margin-bottom: 8em; }
-div.pb9 { margin-bottom: 9em; }
-div.pb10 { margin-bottom: 10em; }
-div.pb11 { margin-bottom: 11em; }
-div.pb12 { margin-bottom: 12em; }
-div.pb13 { margin-bottom: 13em; }
-div.pb14 { margin-bottom: 14em; }
-div.pb15 { margin-bottom: 15em; }
-div.pb16 { margin-bottom: 16em; }
-div.pb17 { margin-bottom: 17em; }
-div.pb18 { margin-bottom: 18em; }
-div.pb19 { margin-bottom: 19em; }
-div.pb20 { margin-bottom: 20em; }
-div.pb21 { margin-bottom: 21em; }
-div.pb22 { margin-bottom: 22em; }
-div.pb23 { margin-bottom: 23em; }
-div.pb24 { margin-bottom: 24em; }
-div.pb25 { margin-bottom: 25em; }
+.vrtl div.pb1 { margin-bottom: 1em; }
+.vrtl div.pb2 { margin-bottom: 2em; }
+.vrtl div.pb3 { margin-bottom: 3em; }
+.vrtl div.pb4 { margin-bottom: 4em; }
+.vrtl div.pb5 { margin-bottom: 5em; }
+.vrtl div.pb6 { margin-bottom: 6em; }
+.vrtl div.pb7 { margin-bottom: 7em; }
+.vrtl div.pb8 { margin-bottom: 8em; }
+.vrtl div.pb9 { margin-bottom: 9em; }
+.vrtl div.pb10 { margin-bottom: 10em; }
+.vrtl div.pb11 { margin-bottom: 11em; }
+.vrtl div.pb12 { margin-bottom: 12em; }
+.vrtl div.pb13 { margin-bottom: 13em; }
+.vrtl div.pb14 { margin-bottom: 14em; }
+.vrtl div.pb15 { margin-bottom: 15em; }
+.vrtl div.pb16 { margin-bottom: 16em; }
+.vrtl div.pb17 { margin-bottom: 17em; }
+.vrtl div.pb18 { margin-bottom: 18em; }
+.vrtl div.pb19 { margin-bottom: 19em; }
+.vrtl div.pb20 { margin-bottom: 20em; }
+.vrtl div.pb21 { margin-bottom: 21em; }
+.vrtl div.pb22 { margin-bottom: 22em; }
+.vrtl div.pb23 { margin-bottom: 23em; }
+.vrtl div.pb24 { margin-bottom: 24em; }
+.vrtl div.pb25 { margin-bottom: 25em; }
 
 /* 地付き */
 div.btm, div.btm p { text-align: right; }
@@ -317,49 +317,49 @@ div.idt-24 { text-indent: -24em; }
 div.idt-25 { text-indent: -25em; }
 
 /* 字詰め */
-div.jzm1 { max-height: 1em; }
-div.jzm2 { max-height: 2em; }
-div.jzm3 { max-height: 3em; }
-div.jzm4 { max-height: 4em; }
-div.jzm5 { max-height: 5em; }
-div.jzm6 { max-height: 6em; }
-div.jzm7 { max-height: 7em; }
-div.jzm8 { max-height: 8em; }
-div.jzm9 { max-height: 9em; }
-div.jzm10 { max-height: 10em; }
-div.jzm11 { max-height: 11em; }
-div.jzm12 { max-height: 12em; }
-div.jzm13 { max-height: 13em; }
-div.jzm14 { max-height: 14em; }
-div.jzm15 { max-height: 15em; }
-div.jzm16 { max-height: 16em; }
-div.jzm17 { max-height: 17em; }
-div.jzm18 { max-height: 18em; }
-div.jzm19 { max-height: 19em; }
-div.jzm20 { max-height: 20em; }
-div.jzm21 { max-height: 21em; }
-div.jzm22 { max-height: 22em; }
-div.jzm23 { max-height: 23em; }
-div.jzm24 { max-height: 24em; }
-div.jzm25 { max-height: 25em; }
-div.jzm26 { max-height: 26em; }
-div.jzm27 { max-height: 27em; }
-div.jzm28 { max-height: 28em; }
-div.jzm29 { max-height: 29em; }
-div.jzm30 { max-height: 30em; }
-div.jzm31 { max-height: 31em; }
-div.jzm32 { max-height: 32em; }
-div.jzm33 { max-height: 33em; }
-div.jzm34 { max-height: 34em; }
-div.jzm35 { max-height: 35em; }
-div.jzm36 { max-height: 36em; }
-div.jzm37 { max-height: 37em; }
-div.jzm38 { max-height: 38em; }
-div.jzm39 { max-height: 39em; }
-div.jzm40 { max-height: 40em; }
+.vrtl div.jzm1 { max-height: 1em; }
+.vrtl div.jzm2 { max-height: 2em; }
+.vrtl div.jzm3 { max-height: 3em; }
+.vrtl div.jzm4 { max-height: 4em; }
+.vrtl div.jzm5 { max-height: 5em; }
+.vrtl div.jzm6 { max-height: 6em; }
+.vrtl div.jzm7 { max-height: 7em; }
+.vrtl div.jzm8 { max-height: 8em; }
+.vrtl div.jzm9 { max-height: 9em; }
+.vrtl div.jzm10 { max-height: 10em; }
+.vrtl div.jzm11 { max-height: 11em; }
+.vrtl div.jzm12 { max-height: 12em; }
+.vrtl div.jzm13 { max-height: 13em; }
+.vrtl div.jzm14 { max-height: 14em; }
+.vrtl div.jzm15 { max-height: 15em; }
+.vrtl div.jzm16 { max-height: 16em; }
+.vrtl div.jzm17 { max-height: 17em; }
+.vrtl div.jzm18 { max-height: 18em; }
+.vrtl div.jzm19 { max-height: 19em; }
+.vrtl div.jzm20 { max-height: 20em; }
+.vrtl div.jzm21 { max-height: 21em; }
+.vrtl div.jzm22 { max-height: 22em; }
+.vrtl div.jzm23 { max-height: 23em; }
+.vrtl div.jzm24 { max-height: 24em; }
+.vrtl div.jzm25 { max-height: 25em; }
+.vrtl div.jzm26 { max-height: 26em; }
+.vrtl div.jzm27 { max-height: 27em; }
+.vrtl div.jzm28 { max-height: 28em; }
+.vrtl div.jzm29 { max-height: 29em; }
+.vrtl div.jzm30 { max-height: 30em; }
+.vrtl div.jzm31 { max-height: 31em; }
+.vrtl div.jzm32 { max-height: 32em; }
+.vrtl div.jzm33 { max-height: 33em; }
+.vrtl div.jzm34 { max-height: 34em; }
+.vrtl div.jzm35 { max-height: 35em; }
+.vrtl div.jzm36 { max-height: 36em; }
+.vrtl div.jzm37 { max-height: 37em; }
+.vrtl div.jzm38 { max-height: 38em; }
+.vrtl div.jzm39 { max-height: 39em; }
+.vrtl div.jzm40 { max-height: 40em; }
 
 /* 行内全角スペース調整用 */
-span.fullsp { padding-top:.5em; }
+.vrtl span.fullsp { padding-top:.5em; }
 
 /*
 青空文庫追加
@@ -434,7 +434,7 @@ text-decoration:underline red;
 
 
 /* 外字フォント */
-.glyph {
+.vrtl .glyph {
 width: 1em;
 text-orientation: upright;
 -webkit-text-orientation: upright;
