--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -12,14 +12,14 @@ a:active { color: #C00; background: transparent; }
 a:link img, a:visited img { border-style: none; }
 
 /* 画像 */
-span.img {
+.hltr span.img {
 clear: both;
 display: inline-block;
 max-width: 100%;
 max-height: 100%;
 line-height: 1.2em;
 }
-span.img img {
+.hltr span.img img {
 min-height: 1em;
 }
 /* 単ページ横100% */
@@ -30,13 +30,13 @@ width: 100%;
 .fit_h span.img {
 height: 100%;
 }
-span.img.ft {
+.hltr span.img.ft {
 clear: left;
 display: inline;
 float: left;
 padding: .5em .5em .5em 0;
 }
-span.img.fb {
+.hltr span.img.fb {
 clear: right;
 display: inline;
 float: right;
@@ -49,7 +49,7 @@ span.img.fh img {
 height: 100%;
 }
 /* 単ページfloat表示 */
-span.img.fpage {
+.hltr span.img.fpage {
 display: block;
 float: left;
 clear: both;
@@ -60,12 +60,12 @@ vertical-align: center;
 padding-right: 100%;
 }
 /* 画像float表示 */
-span.img.fblk {
+.hltr span.img.fblk {
 display: block;
 float:left;
 padding: .5em 100% .5em 0;
 }
-span.img .caption {
+.hltr span.img .caption {
 display: block;
 text-align: center;
 font-size: 85%;
@@ -89,12 +89,12 @@ display: inline-block;
 line-height:1em;
 }
 /* 窓見出し 左右paddingは (lineheight-文字サイズ/2)/文字サイズ */
-span.mado.L { font-size:1.5em; padding:0.625em 0.33em 0 0; line-height:1em;}
-span.mado.M { font-size:1.3em; padding:0.846em 0.38em 0 0; line-height:1em;}
-span.mado.S { font-size:1.1em; padding:1.091em 0.45em 0 0; line-height:1em;}
+.hltr span.mado.L { font-size:1.5em; padding:0.625em 0.33em 0 0; line-height:1em;}
+.hltr span.mado.M { font-size:1.3em; padding:0.846em 0.38em 0 0; line-height:1em;}
+.hltr span.mado.S { font-size:1.1em; padding:1.091em 0.45em 0 0; line-height:1em;}
 
 /** 割り注 (要改行) */
-span.wrc {
+.hltr span.wrc {
 display: inline-block;
 font-size: 0.6em;
 line-height: 1em;
@@ -109,85 +109,85 @@ top: -.35em;
 div.center, div.center p { text-align: center; }
 
 /* 字下げ */
-div.pt1 { padding-left: 1em; }
-div.pt2 { padding-left: 2em; }
-div.pt3 { padding-left: 3em; }
-div.pt4 { padding-left: 4em; }
-div.pt5 { padding-left: 5em; }
-div.pt6 { padding-left: 6em; }
-div.pt7 { padding-left: 7em; }
-div.pt8 { padding-left: 8em; }
-div.pt9 { padding-left: 9em; }
-div.pt10 { padding-left: 10em; }
-div.pt11 { padding-left: 11em; }
-div.pt12 { padding-left: 12em; }
-div.pt13 { padding-left: 13em; }
-div.pt14 { padding-left: 14em; }
-div.pt15 { padding-left: 15em; }
-div.pt16 { padding-left: 16em; }
-div.pt17 { padding-left: 17em; }
-div.pt18 { padding-left: 18em; }
-div.pt19 { padding-left: 19em; }
-div.pt20 { padding-left: 20em; }
-div.pt21 { padding-left: 21em; }
-div.pt22 { padding-left: 22em; }
-div.pt23 { padding-left: 23em; }
-div.pt24 { padding-left: 24em; }
-div.pt25 { padding-left: 25em; }
+.hltr div.pt1 { padding-left: 1em; }
+.hltr div.pt2 { padding-left: 2em; }
+.hltr div.pt3 { padding-left: 3em; }
+.hltr div.pt4 { padding-left: 4em; }
+.hltr div.pt5 { padding-left: 5em; }
+.hltr div.pt6 { padding-left: 6em; }
+.hltr div.pt7 { padding-left: 7em; }
+.hltr div.pt8 { padding-left: 8em; }
+.hltr div.pt9 { padding-left: 9em; }
+.hltr div.pt10 { padding-left: 10em; }
+.hltr div.pt11 { padding-left: 11em; }
+.hltr div.pt12 { padding-left: 12em; }
+.hltr div.pt13 { padding-left: 13em; }
+.hltr div.pt14 { padding-left: 14em; }
+.hltr div.pt15 { padding-left: 15em; }
+.hltr div.pt16 { padding-left: 16em; }
+.hltr div.pt17 { padding-left: 17em; }
+.hltr div.pt18 { padding-left: 18em; }
+.hltr div.pt19 { padding-left: 19em; }
+.hltr div.pt20 { padding-left: 20em; }
+.hltr div.pt21 { padding-left: 21em; }
+.hltr div.pt22 { padding-left: 22em; }
+.hltr div.pt23 { padding-left: 23em; }
+.hltr div.pt24 { padding-left: 24em; }
+.hltr div.pt25 { padding-left: 25em; }
 
 /* 字下げ２ */
-div.mt1 { margin-left: 1em; }
-div.mt2 { margin-left: 2em; }
-div.mt3 { margin-left: 3em; }
-div.mt4 { margin-left: 4em; }
-div.mt5 { margin-left: 5em; }
-div.mt6 { margin-left: 6em; }
-div.mt7 { margin-left: 7em; }
-div.mt8 { margin-left: 8em; }
-div.mt9 { margin-left: 9em; }
-div.mt10 { margin-left: 10em; }
-div.mt11 { margin-left: 11em; }
-div.mt12 { margin-left: 12em; }
-div.mt13 { margin-left: 13em; }
-div.mt14 { margin-left: 14em; }
-div.mt15 { margin-left: 15em; }
-div.mt16 { margin-left: 16em; }
-div.mt17 { margin-left: 17em; }
-div.mt18 { margin-left: 18em; }
-div.mt19 { margin-left: 19em; }
-div.mt20 { margin-left: 20em; }
-div.mt21 { margin-left: 21em; }
-div.mt22 { margin-left: 22em; }
-div.mt23 { margin-left: 23em; }
-div.mt24 { margin-left: 24em; }
-div.mt25 { margin-left: 25em; }
+.hltr div.mt1 { margin-left: 1em; }
+.hltr div.mt2 { margin-left: 2em; }
+.hltr div.mt3 { margin-left: 3em; }
+.hltr div.mt4 { margin-left: 4em; }
+.hltr div.mt5 { margin-left: 5em; }
+.hltr div.mt6 { margin-left: 6em; }
+.hltr div.mt7 { margin-left: 7em; }
+.hltr div.mt8 { margin-left: 8em; }
+.hltr div.mt9 { margin-left: 9em; }
+.hltr div.mt10 { margin-left: 10em; }
+.hltr div.mt11 { margin-left: 11em; }
+.hltr div.mt12 { margin-left: 12em; }
+.hltr div.mt13 { margin-left: 13em; }
+.hltr div.mt14 { margin-left: 14em; }
+.hltr div.mt15 { margin-left: 15em; }
+.hltr div.mt16 { margin-left: 16em; }
+.hltr div.mt17 { margin-left: 17em; }
+.hltr div.mt18 { margin-left: 18em; }
+.hltr div.mt19 { margin-left: 19em; }
+.hltr div.mt20 { margin-left: 20em; }
+.hltr div.mt21 { margin-left: 21em; }
+.hltr div.mt22 { margin-left: 22em; }
+.hltr div.mt23 { margin-left: 23em; }
+.hltr div.mt24 { margin-left: 24em; }
+.hltr div.mt25 { margin-left: 25em; }
 
 /* 字上げ */
-div.pb1 { margin-right: 1em; }
-div.pb2 { margin-right: 2em; }
-div.pb3 { margin-right: 3em; }
-div.pb4 { margin-right: 4em; }
-div.pb5 { margin-right: 5em; }
-div.pb6 { margin-right: 6em; }
-div.pb7 { margin-right: 7em; }
-div.pb8 { margin-right: 8em; }
-div.pb9 { margin-right: 9em; }
-div.pb10 { margin-right: 10em; }
-div.pb11 { margin-right: 11em; }
-div.pb12 { margin-right: 12em; }
-div.pb13 { margin-right: 13em; }
-div.pb14 { margin-right: 14em; }
-div.pb15 { margin-right: 15em; }
-div.pb16 { margin-right: 16em; }
-div.pb17 { margin-right: 17em; }
-div.pb18 { margin-right: 18em; }
-div.pb19 { margin-right: 19em; }
-div.pb20 { margin-right: 20em; }
-div.pb21 { margin-right: 21em; }
-div.pb22 { margin-right: 22em; }
-div.pb23 { margin-right: 23em; }
-div.pb24 { margin-right: 24em; }
-div.pb25 { margin-right: 25em; }
+.hltr div.pb1 { margin-right: 1em; }
+.hltr div.pb2 { margin-right: 2em; }
+.hltr div.pb3 { margin-right: 3em; }
+.hltr div.pb4 { margin-right: 4em; }
+.hltr div.pb5 { margin-right: 5em; }
+.hltr div.pb6 { margin-right: 6em; }
+.hltr div.pb7 { margin-right: 7em; }
+.hltr div.pb8 { margin-right: 8em; }
+.hltr div.pb9 { margin-right: 9em; }
+.hltr div.pb10 { margin-right: 10em; }
+.hltr div.pb11 { margin-right: 11em; }
+.hltr div.pb12 { margin-right: 12em; }
+.hltr div.pb13 { margin-right: 13em; }
+.hltr div.pb14 { margin-right: 14em; }
+.hltr div.pb15 { margin-right: 15em; }
+.hltr div.pb16 { margin-right: 16em; }
+.hltr div.pb17 { margin-right: 17em; }
+.hltr div.pb18 { margin-right: 18em; }
+.hltr div.pb19 { margin-right: 19em; }
+.hltr div.pb20 { margin-right: 20em; }
+.hltr div.pb21 { margin-right: 21em; }
+.hltr div.pb22 { margin-right: 22em; }
+.hltr div.pb23 { margin-right: 23em; }
+.hltr div.pb24 { margin-right: 24em; }
+.hltr div.pb25 { margin-right: 25em; }
 
 /* 地付き */
 div.btm, div.btm p { text-align: right; }
@@ -248,59 +248,59 @@ div.idt-24 { text-indent: -24em; }
 div.idt-25 { text-indent: -25em; }
 
 /* 字詰め */
-div.jzm1 { max-width: 1em; }
-div.jzm2 { max-width: 2em; }
-div.jzm3 { max-width: 3em; }
-div.jzm4 { max-width: 4em; }
-div.jzm5 { max-width: 5em; }
-div.jzm6 { max-width: 6em; }
-div.jzm7 { max-width: 7em; }
-div.jzm8 { max-width: 8em; }
-div.jzm9 { max-width: 9em; }
-div.jzm10 { max-width: 10em; }
-div.jzm11 { max-width: 11em; }
-div.jzm12 { max-width: 12em; }
-div.jzm13 { max-width: 13em; }
-div.jzm14 { max-width: 14em; }
-div.jzm15 { max-width: 15em; }
-div.jzm16 { max-width: 16em; }
-div.jzm17 { max-width: 17em; }
-div.jzm18 { max-width: 18em; }
-div.jzm19 { max-width: 19em; }
-div.jzm20 { max-width: 20em; }
-div.jzm21 { max-width: 21em; }
-div.jzm22 { max-width: 22em; }
-div.jzm23 { max-width: 23em; }
-div.jzm24 { max-width: 24em; }
-div.jzm25 { max-width: 25em; }
-div.jzm26 { max-width: 26em; }
-div.jzm27 { max-width: 27em; }
-div.jzm28 { max-width: 28em; }
-div.jzm29 { max-width: 29em; }
-div.jzm30 { max-width: 30em; }
-div.jzm31 { max-width: 31em; }
-div.jzm32 { max-width: 32em; }
-div.jzm33 { max-width: 33em; }
-div.jzm34 { max-width: 34em; }
-div.jzm35 { max-width: 35em; }
-div.jzm36 { max-width: 36em; }
-div.jzm37 { max-width: 37em; }
-div.jzm38 { max-width: 38em; }
-div.jzm39 { max-width: 39em; }
-div.jzm40 { max-width: 40em; }
-div.jzm41 { max-width: 41em; }
-div.jzm42 { max-width: 42em; }
-div.jzm43 { max-width: 43em; }
-div.jzm44 { max-width: 44em; }
-div.jzm45 { max-width: 45em; }
-div.jzm46 { max-width: 46em; }
-div.jzm47 { max-width: 47em; }
-div.jzm48 { max-width: 48em; }
-div.jzm49 { max-width: 49em; }
-div.jzm50 { max-width: 50em; }
+.hltr div.jzm1 { max-width: 1em; }
+.hltr div.jzm2 { max-width: 2em; }
+.hltr div.jzm3 { max-width: 3em; }
+.hltr div.jzm4 { max-width: 4em; }
+.hltr div.jzm5 { max-width: 5em; }
+.hltr div.jzm6 { max-width: 6em; }
+.hltr div.jzm7 { max-width: 7em; }
+.hltr div.jzm8 { max-width: 8em; }
+.hltr div.jzm9 { max-width: 9em; }
+.hltr div.jzm10 { max-width: 10em; }
+.hltr div.jzm11 { max-width: 11em; }
+.hltr div.jzm12 { max-width: 12em; }
+.hltr div.jzm13 { max-width: 13em; }
+.hltr div.jzm14 { max-width: 14em; }
+.hltr div.jzm15 { max-width: 15em; }
+.hltr div.jzm16 { max-width: 16em; }
+.hltr div.jzm17 { max-width: 17em; }
+.hltr div.jzm18 { max-width: 18em; }
+.hltr div.jzm19 { max-width: 19em; }
+.hltr div.jzm20 { max-width: 20em; }
+.hltr div.jzm21 { max-width: 21em; }
+.hltr div.jzm22 { max-width: 22em; }
+.hltr div.jzm23 { max-width: 23em; }
+.hltr div.jzm24 { max-width: 24em; }
+.hltr div.jzm25 { max-width: 25em; }
+.hltr div.jzm26 { max-width: 26em; }
+.hltr div.jzm27 { max-width: 27em; }
+.hltr div.jzm28 { max-width: 28em; }
+.hltr div.jzm29 { max-width: 29em; }
+.hltr div.jzm30 { max-width: 30em; }
+.hltr div.jzm31 { max-width: 31em; }
+.hltr div.jzm32 { max-width: 32em; }
+.hltr div.jzm33 { max-width: 33em; }
+.hltr div.jzm34 { max-width: 34em; }
+.hltr div.jzm35 { max-width: 35em; }
+.hltr div.jzm36 { max-width: 36em; }
+.hltr div.jzm37 { max-width: 37em; }
+.hltr div.jzm38 { max-width: 38em; }
+.hltr div.jzm39 { max-width: 39em; }
+.hltr div.jzm40 { max-width: 40em; }
+.hltr div.jzm41 { max-width: 41em; }
+.hltr div.jzm42 { max-width: 42em; }
+.hltr div.jzm43 { max-width: 43em; }
+.hltr div.jzm44 { max-width: 44em; }
+.hltr div.jzm45 { max-width: 45em; }
+.hltr div.jzm46 { max-width: 46em; }
+.hltr div.jzm47 { max-width: 47em; }
+.hltr div.jzm48 { max-width: 48em; }
+.hltr div.jzm49 { max-width: 49em; }
+.hltr div.jzm50 { max-width: 50em; }
 
 /* 行内全角スペース調整用 */
-span.fullsp { padding-left:.5em; }
+.hltr span.fullsp { padding-left:.5em; }
 
 
 
@@ -328,49 +328,49 @@ text-emphasis-position: under;
 
 /* 傍線 */
 /* 【横組み】二重線 */
-double_underline {
+.hltr double_underline {
 text-decoration:underline double;
 }
 /* 【横組み】鎖線 */
-dotted_underline {
+.hltr dotted_underline {
 text-decoration:underline dotted;
 }
 /* 【横組み】破線 */
-dashed_underline {
+.hltr dashed_underline {
 text-decoration:underline dashed;
 }
 /* 【横組み】波線 */
-wave_underline {
+.hltr wave_underline {
 text-decoration:underline wavy;
 }
 /* 【横組み】赤線 */
-line-red {
+.hltr line-red {
 text-decoration:underline red;
 }
 /* 【横組み】左に二重傍線 */
-left_double_underline {
+.hltr left_double_underline {
 text-decoration:overline double;
 }
 /* 【横組み】左に鎖線 */
-left_dotted_underline {
+.hltr left_dotted_underline {
 text-decoration:overline dotted;
 }
 /* 【横組み】左に破線 */
-left_dashed_underline {
+.hltr left_dashed_underline {
 text-decoration:overline dotted;
 }
 /* 【横組み】左に波線 */
-left_wave_underline {
+.hltr left_wave_underline {
 text-decoration:overline wavy;
 }
 /* 【横組み】左に赤線 */
-left-line-red {
+.hltr left-line-red {
 text-decoration:overline red;
 }
 
 
 /* 外字フォント */
-.glyph {
+.hltr .glyph {
 height: 1em;
 }
 
