--- a/template/OPS/css/vertical_text.vm
+++ b/template/OPS/css/vertical_text.vm
@@ -6,14 +6,14 @@
 margin: ${pageMargin[0]} ${pageMargin[1]} ${pageMargin[2]} ${pageMargin[3]};
 }
 
-html {
+html.vrtl {
 margin: ${bodyMargin[0]} ${bodyMargin[1]} ${bodyMargin[2]} ${bodyMargin[3]};
 padding: 0;
 writing-mode: vertical-rl;
 -webkit-writing-mode: vertical-rl;
 -epub-writing-mode: vertical-rl;
 -epub-line-break: strict;
-line-break: strict;	
+line-break: strict;
 -epub-word-break: normal;
 word-break: normal;
 }
@@ -31,7 +31,7 @@ vertical-align: baseline;
 #if (${boldUseGothic})
 .b,
 #end
-.gtc {
+.vrtl .gtc {
 font-family: '@ＭＳ ゴシック','@MS Gothic',sans-serif;
 }
 #if (${gothicUseBold})
