--- a/template/OPS/css/horizontal_image.css
+++ b/template/OPS/css/horizontal_image.css
@@ -15,15 +15,15 @@ margin: 0;
 padding: 0;
 }
 
-body {
+.hltr body {
 margin: 0;
 padding: 0;
 }
-body.fit_h {
+.hltr body.fit_h {
 text-align: center;
 }
 /* ページ内 画像は縮小のみ */
-body .img {
+.hltr body .img {
 width: 100%;
 height: 100%;
 text-align: center;
