--- a/template/OPS/css/horizontal_middle.css
+++ b/template/OPS/css/horizontal_middle.css
@@ -7,13 +7,13 @@ margin-top: 0;
 margin-bottom: 0;
 }
 
-html {
+html.hltr {
 margin-top: 0;
 margin-bottom: 0;
 width:100%;
 height:100%;
 }
-body {
+.hltr body {
 margin-top: 0;
 margin-bottom: 0;
 vertical-align: baseline;
@@ -42,17 +42,17 @@ vertical-align: bottom;
 
 
 /* kindle左右中央 */
-div.kindle_outer {
+.hltr div.kindle_outer {
 writing-mode: vertical-rl;
 -webkit-writing-mode: vertical-rl;
 -epub-writing-mode: vertical-rl;
 text-align: center;
 height:100%;
 }
-div.kindle_outer.bottom {
+.hltr div.kindle_outer.bottom {
 text-align: right;
 }
-div.kindle_inner {
+.hltr div.kindle_inner {
 display: inline-block;
 writing-mode: horizontal-tb;
 -webkit-writing-mode: horizontal-tb;
