--- a/template/OPS/css/vertical_middle.css
+++ b/template/OPS/css/vertical_middle.css
@@ -8,12 +8,12 @@ margin-right: 0;
 width:100%;
 }
 
-html {
+html.vrtl {
 margin-left: 0;
 margin-right: 0;
 width:100%;
 }
-body {
+.vrtl body {
 margin-left: 0;
 margin-right: 0;
 vertical-align: middle;
@@ -40,7 +40,7 @@ vertical-align: bottom;
 }
 
 /* kindle左右中央 */
-div.kindle_outer {
+.vrtl div.kindle_outer {
 writing-mode: horizontal-tb;
 -webkit-writing-mode: horizontal-tb;
 -epub-writing-mode: horizontal-tb;
@@ -50,10 +50,10 @@ margin: 0;
 padding: 0;
 line-height: 0;
 }
-div.kindle_outer.bottom {
+.vrtl div.kindle_outer.bottom {
 text-align: left;
 }
-div.kindle_inner {
+.vrtl div.kindle_inner {
 display: inline-block;
 writing-mode: vertical-rl;
 -webkit-writing-mode: vertical-rl;
