使っていないCSSの削除 horizontal.cssとvertical.cssをaozora.cssに統合

--- a/template/OPS/css/book-style.css
+++ b/template/OPS/css/book-style.css
@@ -2,8 +2,7 @@
 @import "style-reset.css";
 @import "style-standard.css";
 @import "style-advance.css";
-@import "vertical.css";
-@import "horizontal.css";
+@import "aozora.css";
 @import "font.css";
 @import "text.css";
 
