--- a/template/OPS/package.vm
+++ b/template/OPS/package.vm
@@ -44,8 +44,7 @@
 #if (${bookInfo.ImageOnly})
 		<item id="svg_image" href="css/fixed-layout-jp.css" media-type="text/css"/>
 #else
-		<item id="vertical" href="css/vertical.css" media-type="text/css"/>
-		<item id="horizontal" href="css/horizontal.css" media-type="text/css"/>
+		<item id="vertical" href="css/aozora.css" media-type="text/css"/>
 		<item id="v_font" href="css/font.css" media-type="text/css"/>
 		<item id="v_text" href="css/text.css" media-type="text/css"/>
 		<item id="v_middle" href="css/middle.css" media-type="text/css"/>
@@ -55,7 +54,6 @@
 		<item id="style-reset" href="css/style-reset.css" media-type="text/css"/>
 		<item id="style-standard" href="css/style-standard.css" media-type="text/css"/>
 		<item id="style-advance" href="css/style-advance.css" media-type="text/css"/>
-
 #end
 
 		<item id="nav" properties="nav" href="xhtml/nav.xhtml" media-type="application/xhtml+xml"/>
