--- a/template/item/xhtml/cover.vm
+++ b/template/item/xhtml/cover.vm
@@ -3,13 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:lang="ja" lang="ja">
 <head>
 <meta name="viewport" content="width=${coverImage.Width}, height=${imageInfo.OutHeight}"/>
-	<link rel="stylesheet" type="text/css" href="../css/fixed-layout-jp.css"/>
+	<link rel="stylesheet" type="text/css" href="../style/fixed-layout-jp.css"/>
 	<title>${title}</title>
 </head>
 <body>
 <div>
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 ${coverImage.Width} ${coverImage.Height}">
-<image width="${coverImage.Width}" height="${coverImage.Height}" xlink:href="../images/${coverImage.OutFileName}"/>
+<image width="${coverImage.Width}" height="${coverImage.Height}" xlink:href="../image/${coverImage.OutFileName}"/>
 </svg>
 </div>
 </body>
