--- a/template/item/xhtml/svg_image.vm
+++ b/template/item/xhtml/svg_image.vm
@@ -4,13 +4,13 @@
 <head>
 <meta charset="UTF-8"/>
 <title>作品名</title>
-	<link rel="stylesheet" type="text/css" href="../css/fixed-layout-jp.css"/>
+	<link rel="stylesheet" type="text/css" href="../style/fixed-layout-jp.css"/>
 <meta name="viewport" content="width=${imageInfo.OutWidth}, height=${imageInfo.OutHeight}"/>
 </head>
 <body>
 <div class="main">
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 ${imageInfo.OutWidth} ${imageInfo.OutHeight}">
-<image width="${imageInfo.OutWidth}" height="${imageInfo.OutHeight}" xlink:href="../images/${imageInfo.OutFileName}"/>
+<image width="${imageInfo.OutWidth}" height="${imageInfo.OutHeight}" xlink:href="../image/${imageInfo.OutFileName}"/>
 </svg>
 </div>
 </body>
