--- a/template/item/xhtml/svg_image.vm
+++ b/template/item/xhtml/svg_image.vm
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="ja" >
 <head>
 <meta charset="UTF-8"/>
-<title>title</title>
+<title>${title}</title>
 	<link rel="stylesheet" type="text/css" href="../style/fixed-layout-jp.css"/>
 <meta name="viewport" content="width=${imageInfo.OutWidth}, height=${imageInfo.OutHeight}"/>
 </head>
