--- a/template/item/xhtml/cover.vm
+++ b/template/item/xhtml/cover.vm
@@ -1,14 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:lang="ja" lang="ja">
+<html
+xmlns="http://www.w3.org/1999/xhtml"
+xmlns:epub="http://www.idpf.org/2007/ops"
+xml:lang="ja"
+>
 <head>
+<meta charset="UTF-8"/>
+<title>${title}</title>
+<link rel="stylesheet" type="text/css" href="../style/fixed-layout-jp.css"/>
 <meta name="viewport" content="width=${coverImage.Width}, height=${imageInfo.OutHeight}"/>
-	<link rel="stylesheet" type="text/css" href="../style/fixed-layout-jp.css"/>
-	<title>${title}</title>
 </head>
-<body>
-<div>
-<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 ${coverImage.Width} ${coverImage.Height}">
+<body epub:type="cover">
+<div class="main">
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1"
+xmlns:xlink="http://www.w3.org/1999/xlink"
+width="100%" height="100%" viewBox="0 0 ${coverImage.Width} ${coverImage.Height}">
 <image width="${coverImage.Width}" height="${coverImage.Height}" xlink:href="../image/${coverImage.OutFileName}"/>
 </svg>
 </div>
