<meta charset="UTF-8"/>の追加

--- a/template/item/xhtml/xhtml_nav.vm
+++ b/template/item/xhtml/xhtml_nav.vm
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" lang="ja" xml:lang="ja">
 <head>
+<meta charset="UTF-8"/>
 <title>${title}</title>
 <style type="text/css">
 #if (${bookInfo.TocVertical})
