--- a/template/item/package.vm
+++ b/template/item/package.vm
@@ -4,12 +4,10 @@
  version="3.0"
  xml:lang="ja"
  unique-identifier="pub-id"
-#if (${bookInfo.ImageOnly})
  prefix="rendition: http://www.idpf.org/vocab/rendition/#
-         ebpaj: http://www.ebpaj.jp/"
-#else
- prefix="ebpaj: http://www.ebpaj.jp/"
-#end
+         ebpaj: http://www.ebpaj.jp/
+         fixed-layout-jp: http://www.digital-comic.jp/
+         ibooks: http://vocabulary.itunes.apple.com/rdf/ibooks/vocabulary-extensions-1.0/"
 >
 		<metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
 <!-- 作品名 -->
@@ -51,6 +49,7 @@
 #end
 <!-- etc. -->
 <meta property="ebpaj:guide-version">1.1.3</meta>
+<meta property="ibooks:version">1.1.2</meta>
 	</metadata>
 
 	<manifest>
