--- a/template/item/xhtml/xhtml_header.vm
+++ b/template/item/xhtml/xhtml_header.vm
@@ -4,24 +4,23 @@
  xmlns="http://www.w3.org/1999/xhtml"
  xmlns:epub="http://www.idpf.org/2007/ops"
  xml:lang="ja"
- #if (${bookInfo.Vertical})
+#if (${bookInfo.Vertical})
  class="vrtl"
- #else
+#else
  class="hltr"
- #end
+#end
 >
 <head>
-
+<meta charset="UTF-8"/>
+<title>${title}</title>
 #if (${sectionInfo.ImagePage})
-	<link rel="stylesheet" type="text/css" href="../style/image.css"/>
+<link rel="stylesheet" type="text/css" href="../style/image.css"/>
 #else
 #if (${sectionInfo.Middle} || ${sectionInfo.Bottom})
-	<link rel="stylesheet" type="text/css" href="../style/middle.css"/>
+<link rel="stylesheet" type="text/css" href="../style/middle.css"/>
 #end
-	<link rel="stylesheet" type="text/css" href="../style/book-style.css"/>
+<link rel="stylesheet" type="text/css" href="../style/book-style.css"/>
 #end
-
-	<title>${title}</title>
 
 #if (${sectionInfo.ImageHeight} > 0)
 <style type="text/css">
